--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
           <div class="resume-item d-flex flex-column flex-md-row">
             <div class="mr-auto">
 
-              <h1 class="mb-0">Uma
-                <span class="text-primary">Ayer</span>
+              <h1 class="mb-0">Christi
+                <span class="text-primary">O.</span>
               </h1>
               <div class="subheading mb-5">Allen, TX ·
                 <a href="mailto:Christi.Luanna-remove-ana@pm.me"><span style="display:none">-remove-</span>yer@pm.me</a>
