--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 <span class="text-primary">O.</span>
               </h1>
               <div class="subheading mb-5">Allen, TX ·
-                <a href="mailto:Christi.Luanna-remove-ana@pm.me"><span style="display:none">-remove-</span>yer@pm.me</a>
+                <a href="mailto:Christi.Luanna-remove-ana@pm.me"><span style="display:none">-remove-</span>Christi.Luanna@pm.me</a>
               </div>
 
             </div>
