--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>Home</title>
   <meta property="og:title" content="Home" />
-  <meta property="og:image" content="https://usayer.github.io/img/profile.jpg" />
+  <meta property="og:image" content="https://christiluanna.github.io/img/profile.jpg" />
   <meta name="description" content="Data Scientist">
   <meta property="og:description" content="Data Scientist" />
   <meta name="author" content="Uma Ayer">
