--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 <span class="text-primary">O</span>
               </h1>
               <div class="subheading mb-5">Allen, TX·
-                <a href="mailto:christi.-remove-luanna@pm.me">uma.a<span style="display:none">-remove-</span>luanna@pm.me</a>
+                <a href="mailto:christi.-remove-luanna@pm.me">christi.<span style="display:none">-remove-</span>luanna@pm.me</a>
               </div>
 
             </div>
@@ -89,8 +89,9 @@
             
         </div>
         <div>
-          <p>An aspiring Data Scientist with a passion for healthcare analytics.
-Formerly a web content specialist & contributor in the drug addiction treatment field, with a proven record of driving brand awareness and enhancing healthcare outcomes.</p>
+          <p>Data Engineer with a passion for analytics and development.
+Interested in disruptive technologies and enhancing healthcare outcomes.
+.</p>
 
           <ul class="list-inline list-social-icons mb-0">
             
