--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <div class="mr-auto">
 
               <h1 class="mb-0">Christi
-                <span class="text-primary">O</span>
+                <span class="text-primary">Olaosebikan</span>
               </h1>
               <div class="subheading mb-5">Allen, TX·
                 <a href="mailto:christi.-remove-luanna@pm.me">christi.<span style="display:none">-remove-</span>luanna@pm.me</a>
