--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@ Interested in disruptive technologies and enhancing healthcare outcomes.
 <div class="resume-item d-flex flex-column flex-md-row mb-5">
   <div class="publication-content mr-auto">
     <h3 class="mb-0">Article - <a href="https://christiluanna.github.io/publications/techart/">Tech Artcle</a></h3>
-    <div>A Spice/K2 user is much more likely to experience serious adverse effects than a person smoking natural cannabis. These adverse effects may include psychotic symptoms such as paranoia and hallucinations. Furthermore, Spice use has been implicated in cases of kidney failure and heart attacks. With reported effects including reduced blood flow to the heart (myocardial ischemia), abuse of these substances can lead to severe and lasting heart conditions.</div>
+    <div>Tech article blurb.</div>
     <p><ul class="tags">
     
       <li><a class="tag" href="/tags/Tech">Tech</a></li>
