--- a/index.html
+++ b/index.html
@@ -327,7 +327,23 @@ Interested in disruptive technologies and enhancing healthcare outcomes.
 
 </section>
 
-   
+       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="projects">
+  <div class="my-auto" id="experience-content">
+    <h2 class="mb-5">Projects</h2>
+    
+        <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-content mr-auto">
+            <h3 class="mb-0">Special Project</h3>
+            <div class="subheading mb-3">Apple App</div>
+            <p>App to track symptoms .</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">2015 - 2018</span>
+          </div>
+        </div>
+   </div>
+
+</section>
    
                <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="education">
           <div class="my-auto">
