--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@ Interested in disruptive technologies and enhancing healthcare outcomes.
       
 <div class="resume-item d-flex flex-column flex-md-row mb-5">
   <div class="publication-content mr-auto">
-    <h3 class="mb-0">Article - <a href="https://christiluanna.github.io/publications/Blockchain/">Blockchain Usage in Healthcare</a></h3>
+    <h3 class="mb-0">Article - <a href="https://christiluanna.github.io/Blockchain/">Blockchain Usage in Healthcare</a></h3>
     <div></div>
     Potential Blockchain Use Cases in Healthcare<p><ul class="tags">
     
