--- a/Blockchain/index.html
+++ b/Blockchain/index.html
@@ -1,8 +1,8 @@
 
 <html>
 <div>
-<h1><strong>Blockchain uses in the Healthcare Field</strong>&nbsp;</h1>
-<table cellspacing="10" cellpadding="15">
+  <h1><strong><center>Blockchain uses in the Healthcare Field</center></strong>&nbsp;</h1>
+<table style="width: 90%; height: 90%;" cellspacing="10" cellpadding="15">
 <tbody>
 <tr>
 <td>
