--- a/Blockchain/index.html
+++ b/Blockchain/index.html
@@ -20,7 +20,7 @@
 <p><strong>Scope &ndash; </strong>common view of all pre-authorization status, linking all parties engaged in the pre-automation processes.</p>
 <p><strong>Value &ndash; </strong>eliminates inconsistencies, redundancies, and reduces cost while providing a trusted, faster, and reliable network to manage pre-authorization lifecycle.</p>
 <p><strong>Visualization of Pre-Authorization Blockchain Use Case</strong></p>
-<p><strong><img src="christiluanna.github.io/blockchain/image003.jpg" alt="" /></strong></p>
+<p><strong><img src="image003.jpg" alt="" /></strong></p>
 </td>
 </tr>
 </tbody>
