--- a/Blockchain/index.html
+++ b/Blockchain/index.html
@@ -1,28 +1,178 @@
-
 <html>
-<div>
-<h1><strong>Blockchain uses in the Healthcare Field</strong>&nbsp;</h1>
-<table cellspacing="10" cellpadding="15">
+
+<head>
+<meta http-equiv=Content-Type content="text/html; charset=windows-1252">
+<meta name=Generator content="Microsoft Word 15 (filtered)">
+<title>Blockchain uses in the Healthcare Space</title>
+<style>
+<!--
+ /* Font Definitions */
+ @font-face
+	{font-family:"Cambria Math";
+	panose-1:2 4 5 3 5 4 6 3 2 4;}
+@font-face
+	{font-family:Calibri;
+	panose-1:2 15 5 2 2 2 4 3 2 4;}
+@font-face
+	{font-family:"Tw Cen MT";
+	panose-1:2 11 6 2 2 1 4 2 6 3;}
+ /* Style Definitions */
+ p.MsoNormal, li.MsoNormal, div.MsoNormal
+	{margin-top:0in;
+	margin-right:0in;
+	margin-bottom:8.0pt;
+	margin-left:0in;
+	line-height:107%;
+	font-size:11.0pt;
+	font-family:"Calibri",sans-serif;}
+h1
+	{mso-style-link:"Heading 1 Char";
+	margin-top:12.0pt;
+	margin-right:0in;
+	margin-bottom:0in;
+	margin-left:0in;
+	margin-bottom:.0001pt;
+	line-height:107%;
+	page-break-after:avoid;
+	font-size:16.0pt;
+	font-family:"Calibri Light",sans-serif;
+	color:#2F5496;
+	font-weight:normal;}
+p.MsoNoSpacing, li.MsoNoSpacing, div.MsoNoSpacing
+	{margin:0in;
+	margin-bottom:.0001pt;
+	font-size:11.0pt;
+	font-family:"Calibri",sans-serif;}
+span.Heading1Char
+	{mso-style-name:"Heading 1 Char";
+	mso-style-link:"Heading 1";
+	font-family:"Calibri Light",sans-serif;
+	color:#2F5496;}
+.MsoChpDefault
+	{font-family:"Calibri",sans-serif;}
+.MsoPapDefault
+	{margin-bottom:8.0pt;
+	line-height:107%;}
+@page WordSection1
+	{size:8.5in 11.0in;
+	margin:1.0in 1.0in 1.0in 1.0in;}
+div.WordSection1
+	{page:WordSection1;}
+-->
+</style>
+
+</head>
+
+<body lang=EN-US>
+
+<div class=WordSection1>
+
+<h1 align=center style='text-align:center'><b><span style='font-size:20.0pt;
+line-height:107%;font-family:"Calibri",sans-serif;color:black'>Blockchain uses
+in the Healthcare Field</span></b></h1>
+<table style="width: 90%; height: 90%;" cellspacing="10" cellpadding="15">
 <tbody>
 <tr>
-<td>
-<p>Blockchain has been a &lsquo;buzzword&rsquo; for the past few years. Blockchain in healthcare holds promise, but is it a viable solution? Blockchain is best used when two parties, individuals or entities need to complete a transaction that can be validated on the network. At this time the transactions are fairly slow, so if speed is a deciding factor a decentralized blockchain solution would be inefficient. The transactions need to be fairly simply and repeatable. I was part of a team that developed a decentralized solution to store patient medical data in a centralized database and allow them to sell their data to researchers or provide their records to other medical professionals. While it was an interesting learning experience, we felt DLT (Distributed Ledger Technology) was not an appropriate solution. A big factor was the fact that customization, medical records and tests are very complicated and need to be called via smart contracts on the blockchain with a high level of customization for each patient (80/20 rule). For DLT to be successful the transactions need to be fairly simple and repeatable, which is the same reason why a decentralized blockchain solution would be inefficient. As the technology matures, it will be become a revolutionary change in some industries.</p>
-<p>In healthcare, billing and insurance related activities cost over 300 Billion dollars annually to carry out. Consent Management, Pre-Authorization and Provider Credentialing are three possible use cases for Blockchain in healthcare. Given the right scope and integration with current systems, the cost savings would be very significant.</p>
-<p><strong>Consent Management for Data Sharing: </strong></p>
-<p><strong>Scope</strong> &ndash; provides controlled consent authorization for data sharing via blockchain and smart contracts. Initially between payors and the government or partners (i.e. labs) and government. Builds contracts that cover the majority of transactions (80/20 rule).</p>
-<p><strong>Value </strong>&ndash; provides a trusted auditable global authorization system. Connect said entities initially then other entities after the system is developed: providers, payers, partners, government, etc.</p>
-<p><strong>Provider Credentialing:</strong></p>
-<p><strong>Scope &ndash; </strong>creates a trusted auditable global system to manage all provider credential types in healthcare eco- system.</p>
-<p><strong>Value</strong> &ndash; currently, credentials are carried on by states. Each state has one or more boards that provide credentials and other status, some states report statuses (license revocation, board sanctions, criminal convictions) of other states, while others do not. Often times, states fail to review statuses of people from other states. Blockchain can accelerate the credentialing process, provide transparency, reduce fraud, and enforce compliance while maintaining adherence to custom credentialing requirements across the nation.</p>
-<p><strong>Pre-Authorization:</strong></p>
-<p><strong>Scope &ndash; </strong>common view of all pre-authorization status, linking all parties engaged in the pre-automation processes.</p>
-<p><strong>Value &ndash; </strong>eliminates inconsistencies, redundancies, and reduces cost while providing a trusted, faster, and reliable network to manage pre-authorization lifecycle.</p>
-<p><strong>Visualization of Pre-Authorization Blockchain Use Case</strong></p>
-<p><strong><img src="christiluanna.github.io/blockchain/image003.jpg" alt="" /></strong></p>
+<td
+<p class=MsoNormal><span style='font-size:12.0pt;line-height:107%;font-family:
+"Tw Cen MT",sans-serif'>&nbsp;</span></p>
+
+<p class=MsoNormal><span style='font-size:12.0pt;line-height:107%;font-family:
+"Tw Cen MT",sans-serif'>Blockchain has been a ‘buzzword’ for the past few
+years. Blockchain in healthcare holds promise, but is it a viable solution?
+Blockchain is best used when two parties, individuals or entities need to
+complete a transaction that can be validated on the network. At this time the
+transactions are fairly slow, so if speed is a deciding factor a decentralized
+blockchain solution would be inefficient. The transactions need to be fairly
+simply and repeatable. I was part of a team that developed a decentralized
+solution to store patient medical data in a centralized database and allow them
+to sell their data to researchers or provide their records to other medical
+professionals. While it was an interesting learning experience, we felt DLT (Distributed
+Ledger Technology) was not an appropriate solution. A big factor was the fact
+that customization, medical records and tests are very complicated and need to
+be called via smart contracts on the blockchain with a high level of
+customization for each patient (80/20 rule). For DLT to be successful the
+transactions need to be fairly simple and repeatable, which is the same reason
+why a decentralized blockchain solution would be inefficient. As the technology
+matures, it will be become a revolutionary change in some industries. </span></p>
+
+<p class=MsoNormal><span style='font-size:12.0pt;line-height:107%;font-family:
+"Tw Cen MT",sans-serif'>In healthcare, billing and insurance related activities
+cost over 300 Billion dollars annually to carry out. Consent Management,
+Pre-Authorization and Provider Credentialing are three possible use cases for Blockchain
+in healthcare. Given the right scope and integration with current systems, the
+cost savings would be very significant. </span></p>
+
+<p class=MsoNoSpacing><b><span style='font-size:12.0pt;font-family:"Tw Cen MT",sans-serif'>Consent
+Management for Data Sharing: </span></b></p>
+
+<p class=MsoNoSpacing><b><span style='font-size:12.0pt;font-family:"Tw Cen MT",sans-serif'>Scope</span></b><span
+style='font-size:12.0pt;font-family:"Tw Cen MT",sans-serif'> – provides
+controlled consent authorization for data sharing via blockchain and smart
+contracts. Initially between payors and the government or partners (i.e. labs)
+and government. Builds contracts that cover the majority of transactions (80/20
+rule). </span></p>
+
+<p class=MsoNoSpacing><b><span style='font-size:12.0pt;font-family:"Tw Cen MT",sans-serif'>Value
+</span></b><span style='font-size:12.0pt;font-family:"Tw Cen MT",sans-serif'>–
+provides a trusted auditable global authorization system. Connect said entities
+initially then other entities after the system is developed: providers, payers,
+partners, government, etc. </span></p>
+
+<p class=MsoNoSpacing><span style='font-size:12.0pt;font-family:"Tw Cen MT",sans-serif'>&nbsp;</span></p>
+
+<p class=MsoNoSpacing><b><span style='font-size:12.0pt;font-family:"Tw Cen MT",sans-serif'>Provider
+Credentialing:</span></b></p>
+
+<p class=MsoNoSpacing><b><span style='font-size:12.0pt;font-family:"Tw Cen MT",sans-serif'>Scope
+– </span></b><span style='font-size:12.0pt;font-family:"Tw Cen MT",sans-serif'>creates
+a trusted auditable global system to manage all provider credential types in
+healthcare eco- system. </span></p>
+
+<p class=MsoNoSpacing><b><span style='font-size:12.0pt;font-family:"Tw Cen MT",sans-serif'>Value</span></b><span
+style='font-size:12.0pt;font-family:"Tw Cen MT",sans-serif'> – currently, credentials
+are carried on by states. Each state has one or more boards that provide credentials
+and other status, some states report statuses (license revocation, board
+sanctions, criminal convictions) of other states, while others do not. Often
+times, states fail to review statuses of people from other states. Blockchain
+can accelerate the credentialing process, provide transparency, reduce fraud,
+and enforce compliance while maintaining adherence to custom credentialing
+requirements across the nation. </span></p>
+
+<p class=MsoNoSpacing><span style='font-size:12.0pt;font-family:"Tw Cen MT",sans-serif'>&nbsp;</span></p>
+
+<p class=MsoNoSpacing><b><span style='font-size:12.0pt;font-family:"Tw Cen MT",sans-serif'>Pre-Authorization:</span></b></p>
+
+<p class=MsoNoSpacing><b><span style='font-size:12.0pt;font-family:"Tw Cen MT",sans-serif'>Scope
+– </span></b><span style='font-size:12.0pt;font-family:"Tw Cen MT",sans-serif'>common
+view of all pre-authorization status, linking all parties engaged in the pre-automation
+processes. </span></p>
+
+<p class=MsoNoSpacing><b><span style='font-size:12.0pt;font-family:"Tw Cen MT",sans-serif'>Value
+– </span></b><span style='font-size:12.0pt;font-family:"Tw Cen MT",sans-serif'>eliminates
+inconsistencies, redundancies, and reduces cost while providing a trusted, faster,
+and reliable network to manage pre-authorization lifecycle. </span></p>
+
+<p class=MsoNormal><span style='font-size:14.0pt;line-height:107%;font-family:
+"Tw Cen MT",sans-serif'>&nbsp;</span></p>
+
+<p class=MsoNormal><b><span style='font-size:14.0pt;line-height:107%;
+font-family:"Tw Cen MT",sans-serif'>&nbsp;</span></b></p>
+
+<p class=MsoNormal><b><span style='font-size:12.0pt;line-height:107%'>&nbsp;</span></b></p>
+
+<p class=MsoNormal><b><span style='font-size:18.0pt;line-height:107%'>Visualization
+of Pre-Authorization Blockchain Use Case </span></b></p>
+
+<p class=MsoNormal align=center style='text-align:center'><span
+style='font-size:12.0pt;line-height:107%'><img width=701 height=399
+id="Picture 1" src="image003.jpg"></span></p>
 </td>
 </tr>
 </tbody>
 </table>
 </div>
+
+</body>
 
 </html>
