--- a/Blockchain/index.html
+++ b/Blockchain/index.html
@@ -78,7 +78,7 @@ in the Healthcare Field</span></b></h1>
 "Tw Cen MT",sans-serif'>&nbsp;</span></p>
 
 <p class=MsoNormal><span style='font-size:12.0pt;line-height:107%;font-family:
-"Tw Cen MT",sans-serif'>Blockchain has been a ‘buzzword’ for the past few
+"Tw Cen MT",sans-serif'>Blockchain has been a &lsquo;buzzword&rsquo; for the past few
 years. Blockchain in healthcare holds promise, but is it a viable solution?
 Blockchain is best used when two parties, individuals or entities need to
 complete a transaction that can be validated on the network. At this time the
@@ -87,7 +87,7 @@ blockchain solution would be inefficient. The transactions need to be fairly
 simply and repeatable. I was part of a team that developed a decentralized
 solution to store patient medical data in a centralized database and allow them
 to sell their data to researchers or provide their records to other medical
-professionals. While it was an interesting learning experience, we felt DLT (Distributed
+professionals. While it was an interesting learning experience, the team felt DLT (Distributed
 Ledger Technology) was not an appropriate solution. A big factor was the fact
 that customization, medical records and tests are very complicated and need to
 be called via smart contracts on the blockchain with a high level of
@@ -107,14 +107,14 @@ cost savings would be very significant. </span></p>
 Management for Data Sharing: </span></b></p>
 
 <p class=MsoNoSpacing><b><span style='font-size:12.0pt;font-family:"Tw Cen MT",sans-serif'>Scope</span></b><span
-style='font-size:12.0pt;font-family:"Tw Cen MT",sans-serif'> – provides
+style='font-size:12.0pt;font-family:"Tw Cen MT",sans-serif'> &ndash; provides
 controlled consent authorization for data sharing via blockchain and smart
 contracts. Initially between payors and the government or partners (i.e. labs)
 and government. Builds contracts that cover the majority of transactions (80/20
 rule). </span></p>
 
 <p class=MsoNoSpacing><b><span style='font-size:12.0pt;font-family:"Tw Cen MT",sans-serif'>Value
-</span></b><span style='font-size:12.0pt;font-family:"Tw Cen MT",sans-serif'>–
+</span></b><span style='font-size:12.0pt;font-family:"Tw Cen MT",sans-serif'>&ndash;
 provides a trusted auditable global authorization system. Connect said entities
 initially then other entities after the system is developed: providers, payers,
 partners, government, etc. </span></p>
