--- a/Blockchain/index.html
+++ b/Blockchain/index.html
@@ -144,12 +144,12 @@ requirements across the nation. </span></p>
 <p class=MsoNoSpacing><b><span style='font-size:12.0pt;font-family:"Tw Cen MT",sans-serif'>Pre-Authorization:</span></b></p>
 
 <p class=MsoNoSpacing><b><span style='font-size:12.0pt;font-family:"Tw Cen MT",sans-serif'>Scope
-– </span></b><span style='font-size:12.0pt;font-family:"Tw Cen MT",sans-serif'>common
+&nbsp; </span></b><span style='font-size:12.0pt;font-family:"Tw Cen MT",sans-serif'>common
 view of all pre-authorization status, linking all parties engaged in the pre-automation
 processes. </span></p>
 
 <p class=MsoNoSpacing><b><span style='font-size:12.0pt;font-family:"Tw Cen MT",sans-serif'>Value
-– </span></b><span style='font-size:12.0pt;font-family:"Tw Cen MT",sans-serif'>eliminates
+&nbsp;</span></b><span style='font-size:12.0pt;font-family:"Tw Cen MT",sans-serif'>eliminates
 inconsistencies, redundancies, and reduces cost while providing a trusted, faster,
 and reliable network to manage pre-authorization lifecycle. </span></p>
 
