--- a/Blockchain/index.html
+++ b/Blockchain/index.html
@@ -125,12 +125,12 @@ partners, government, etc. </span></p>
 Credentialing:</span></b></p>
 
 <p class=MsoNoSpacing><b><span style='font-size:12.0pt;font-family:"Tw Cen MT",sans-serif'>Scope
-– </span></b><span style='font-size:12.0pt;font-family:"Tw Cen MT",sans-serif'>creates
+&nbsp; </span></b><span style='font-size:12.0pt;font-family:"Tw Cen MT",sans-serif'>creates
 a trusted auditable global system to manage all provider credential types in
 healthcare eco- system. </span></p>
 
 <p class=MsoNoSpacing><b><span style='font-size:12.0pt;font-family:"Tw Cen MT",sans-serif'>Value</span></b><span
-style='font-size:12.0pt;font-family:"Tw Cen MT",sans-serif'> – currently, credentials
+style='font-size:12.0pt;font-family:"Tw Cen MT",sans-serif'> &nbsp; currently, credentials
 are carried on by states. Each state has one or more boards that provide credentials
 and other status, some states report statuses (license revocation, board
 sanctions, criminal convictions) of other states, while others do not. Often
