--- a/Blockchain/index.html
+++ b/Blockchain/index.html
@@ -119,18 +119,18 @@ provides a trusted auditable global authorization system. Connect said entities
 initially then other entities after the system is developed: providers, payers,
 partners, government, etc. </span></p>
 
-<p class=MsoNoSpacing><span style='font-size:12.0pt;font-family:"Tw Cen MT",sans-serif'>&nbsp;</span></p>
+<p class=MsoNoSpacing><span style='font-size:12.0pt;font-family:"Tw Cen MT",sans-serif'>&ndash;</span></p>
 
 <p class=MsoNoSpacing><b><span style='font-size:12.0pt;font-family:"Tw Cen MT",sans-serif'>Provider
 Credentialing:</span></b></p>
 
 <p class=MsoNoSpacing><b><span style='font-size:12.0pt;font-family:"Tw Cen MT",sans-serif'>Scope
-&nbsp; </span></b><span style='font-size:12.0pt;font-family:"Tw Cen MT",sans-serif'>creates
+&ndash; </span></b><span style='font-size:12.0pt;font-family:"Tw Cen MT",sans-serif'>creates
 a trusted auditable global system to manage all provider credential types in
 healthcare eco- system. </span></p>
 
 <p class=MsoNoSpacing><b><span style='font-size:12.0pt;font-family:"Tw Cen MT",sans-serif'>Value</span></b><span
-style='font-size:12.0pt;font-family:"Tw Cen MT",sans-serif'> &nbsp; currently, credentials
+style='font-size:12.0pt;font-family:"Tw Cen MT",sans-serif'> &ndash; currently, credentials
 are carried on by states. Each state has one or more boards that provide credentials
 and other status, some states report statuses (license revocation, board
 sanctions, criminal convictions) of other states, while others do not. Often
@@ -144,12 +144,12 @@ requirements across the nation. </span></p>
 <p class=MsoNoSpacing><b><span style='font-size:12.0pt;font-family:"Tw Cen MT",sans-serif'>Pre-Authorization:</span></b></p>
 
 <p class=MsoNoSpacing><b><span style='font-size:12.0pt;font-family:"Tw Cen MT",sans-serif'>Scope
-&nbsp; </span></b><span style='font-size:12.0pt;font-family:"Tw Cen MT",sans-serif'>common
+&ndash; </span></b><span style='font-size:12.0pt;font-family:"Tw Cen MT",sans-serif'>common
 view of all pre-authorization status, linking all parties engaged in the pre-automation
 processes. </span></p>
 
 <p class=MsoNoSpacing><b><span style='font-size:12.0pt;font-family:"Tw Cen MT",sans-serif'>Value
-&nbsp;</span></b><span style='font-size:12.0pt;font-family:"Tw Cen MT",sans-serif'>eliminates
+&ndash;</span></b><span style='font-size:12.0pt;font-family:"Tw Cen MT",sans-serif'>eliminates
 inconsistencies, redundancies, and reduces cost while providing a trusted, faster,
 and reliable network to manage pre-authorization lifecycle. </span></p>
 
