--- a/Blockchain/index.html
+++ b/Blockchain/index.html
@@ -119,7 +119,7 @@ provides a trusted auditable global authorization system. Connect said entities
 initially then other entities after the system is developed: providers, payers,
 partners, government, etc. </span></p>
 
-<p class=MsoNoSpacing><span style='font-size:12.0pt;font-family:"Tw Cen MT",sans-serif'>&ndash;</span></p>
+<p class=MsoNoSpacing><span style='font-size:12.0pt;font-family:"Tw Cen MT",sans-serif'>&nbsp;</span></p>
 
 <p class=MsoNoSpacing><b><span style='font-size:12.0pt;font-family:"Tw Cen MT",sans-serif'>Provider
 Credentialing:</span></b></p>
