--- a/index.html
+++ b/index.html
@@ -354,12 +354,12 @@ Interested in disruptive technologies and enhancing healthcare outcomes.
             
               <div class="resume-item d-flex flex-column flex-md-row mb-5">
                 <div class="resume-content mr-auto">
-                  <h3 class="mb-0">MS</h3>
-                  <div class="subheading mb-3">UTA</div>
-                  <div>MIS</div>
+                  <h3 class="mb-0">Bachelors of Science</h3>
+                  <div class="subheading mb-3">University of Texas at Arlington </div>
+                  <div>Management Information Systems</div>
                 </div>
                 <div class="resume-date text-md-right">
-                  <span class="text-primary">Bachelors</span>
+                  <span class="text-primary">Arlington Texas</span>
                 </div>
               </div>
               
