--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@ types of data and provide detailed feedback and analysis to
 Google.</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">2012</span>
+            <span class="text-primary">2009 -2012</span>
           </div>
         </div>
   </div>
@@ -371,6 +371,28 @@ Google.</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">2018 - 2019</span>
+          </div>
+       
+		
+		   <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-content mr-auto">
+            <h3 class="mb-0">Special Project</h3>
+            <div class="subheading mb-3">Web App Redesign</div>
+            <p>Recipe Site.</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">2011 - 2019</span>
+          </div>
+        </div>
+		
+		   <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-content mr-auto">
+            <h3 class="mb-0">Special Project</h3>
+            <div class="subheading mb-3">Crypto Tracker</div>
+            <p>Price Tracker</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">2017</span>
           </div>
         </div>
    </div>
