--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@ Google.</p>
           <div class="resume-date text-md-right">
             <span class="text-primary">2018 - 2019</span>
           </div>
-       
+        </div>
 		
 		   <div class="resume-item d-flex flex-column flex-md-row mb-5">
           <div class="resume-content mr-auto">
