--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@ Google.</p>
           <div class="resume-content mr-auto">
             <h3 class="mb-0">Special Project</h3>
             <div class="subheading mb-3">IOS Application</div>
-            <p>Syptom Tracker.</p>
+            <p>Symptom Tracker.</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">2018 - 2019</span>
@@ -393,6 +393,17 @@ Google.</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">2017</span>
+          </div>
+        </div>
+		
+		<div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-content mr-auto">
+            <h3 class="mb-0">Special Project</h3>
+            <div class="subheading mb-3">Twitter Spark Streaming</div>
+            <p>Twitter API</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">2018 - 2019</span>
           </div>
         </div>
    </div>
