--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@ Interested in disruptive technologies and enhancing healthcare outcomes.
                 
                   <li class="list-inline-item">
                     <i class="devicons devicons-terminal_badge"></i>
-                    Medical Communications
+                    Coding
                   </li>
                
                   <li class="list-inline-item">
