--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@ Interested in disruptive technologies.
 </p>
 <div class="resume-item d-flex flex-column flex-md-row mb-5">
   <div class="publication-content mr-auto">
-    <h3 class="mb-0">Article - <a href="https://medium.com/@christi_o/5-essential-data-structures-for-coders-to-know-248399032c34">Patient Safety</a></h3>
+    <h3 class="mb-0">Article - <a href="https://medium.com/@christi_o/5-essential-data-structures-for-coders-to-know-248399032c34">Data Structures and Programming</a></h3>
     <div> Essential Data Structures for Coders to Understand</div>
     <p><ul class="tags">
     
